--- a/styles/BurningText.module.css
+++ b/styles/BurningText.module.css
@@ -1,7 +1,7 @@
 
   .content {
     position: relative;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     margin: auto;
     animation: content-shift 15s infinite;
