--- a/styles/FloatingText.module.css
+++ b/styles/FloatingText.module.css
@@ -28,6 +28,17 @@
       transform: translate(-50%, -50%) translateY(20px) translateY(50px);;
     }
   }
+
+  @media screen and (max-width: 768px) { 
+    @keyframes up-down {
+      0% {
+        transform: translate(-50%, -50%) translateY(-150px) translateX(100px);
+      }
+      100% {
+        transform: translate(-100%, 50%) translateY(40px) translateX(100px);
+      }
+    }
+  }
   
   @keyframes rotate {
     0% {
