--- a/styles/BurningText.module.css
+++ b/styles/BurningText.module.css
@@ -36,6 +36,23 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
+  @media (min-width: 768px) { 
+    .page {
+      height: 100vh;
+    }
+  }
+  
+  @media (min-width: 1024px) { 
+    .page {
+      height: 100vh;
+    }
+  }
+  
+  @media (min-width: 1280px) { 
+    .page {
+      height: 100vh;
+    }
+  }
   
   .text {
     position: flex;
